fix: minor changes to profile